--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
 		"discord.js": "^12.2.0",
 		"ocore": "git+https://github.com/byteball/ocore.git",
 		"dotenv": "^8.2.0"
+	},
+	"resolutions": {
+		"level-rocksdb": "^4.0.0"
 	}
 }
