rewrite: only watch governance AAs
+ use aabot

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"dependencies": {
 		"discord.js": "^12.2.0",
 		"ocore": "git+https://github.com/byteball/ocore.git",
-		"dotenv": "^8.2.0"
+		"dotenv": "^8.2.0",
+		"aabot": "git+https://github.com/byteball/aabot.git"
 	},
 	"resolutions": {
 		"level-rocksdb": "^4.0.0"
